@@ -76,7 +76,7 @@ public class MemberService {
 
     @PreAuthorize("hasPermission(#entityId, #entityType.getName(), 'WRITE') or hasRole('ADMIN')")
     public <T> List<MemberDTO> getMembers(String entityId, Class<T> entityType) {
-        MutableAcl acl = retrieveAcl(entityId, entityType);
+        final MutableAcl acl = retrieveAcl(entityId, entityType);
         return acl.getEntries()
                 .stream()
                 .collect(Collectors.groupingBy(AccessControlEntry::getSid,
@@ -84,60 +84,61 @@ public class MemberService {
                 .entrySet()
                 .stream()
                 .map(entry -> {
-                    Membership membership = deriveMembership(entry.getValue());
-                    User user = userRepository.findByUuid(((PrincipalSid) entry.getKey()).getPrincipal()).get();
+                    final Membership membership = deriveMembership(entry.getValue());
+                    final User user = userRepository.findByUuid(
+                            ((PrincipalSid) entry.getKey()).getPrincipal()
+                    ).get();
                     return memberMapper.toDTO(user, membership);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public <T> Optional<MemberDTO> getMemberForCurrentUser(String entityId, Class<T> entityType) {
-        MutableAcl acl = retrieveAcl(entityId, entityType);
-        Optional<User> oUser = currentUserService.getCurrentUser();
+        final MutableAcl acl = retrieveAcl(entityId, entityType);
+        final Optional<User> oUser = currentUserService.getCurrentUser();
         if (oUser.isEmpty()) {
             return Optional.empty();
         }
-        User user = oUser.get();
-        List<Permission> permissions = acl.getEntries()
+        final User user = oUser.get();
+        final List<Permission> permissions = acl.getEntries()
                 .stream()
                 .filter(ace -> ace.getSid().equals(new PrincipalSid(user.getUuid())))
                 .map(AccessControlEntry::getPermission)
                 .collect(Collectors.toList());
 
         if (permissions.size() > 0) {
-            Membership membership = deriveMembership(permissions);
+            final Membership membership = deriveMembership(permissions);
             return Optional.of(memberMapper.toDTO(user, membership));
-        } else {
-            return Optional.empty();
         }
+        return Optional.empty();
     }
 
     @PreAuthorize("hasPermission(#entityId, #entityType.getName(), 'WRITE') or hasRole('ADMIN')")
     public <T> MemberDTO createOrUpdateMember(String entityId, Class<T> entityType, String userUuid,
                                               String membershipUuid) {
         // Get membership
-        Optional<Membership> oMembership = membershipRepository.findByUuid(membershipUuid);
+        final Optional<Membership> oMembership = membershipRepository.findByUuid(membershipUuid);
         if (oMembership.isEmpty()) {
             throw new ValidationException("Membership doesn't exist");
         }
-        Membership membership = oMembership.get();
+        final Membership membership = oMembership.get();
 
         // Get user
-        Optional<User> oUser = userRepository.findByUuid(userUuid);
+        final Optional<User> oUser = userRepository.findByUuid(userUuid);
         if (oUser.isEmpty()) {
             throw new ValidationException("User doesn't exist");
         }
-        User user = oUser.get();
+        final User user = oUser.get();
 
         // Get ACL
-        MutableAcl acl = retrieveAcl(entityId, entityType);
+        final MutableAcl acl = retrieveAcl(entityId, entityType);
 
         // Remove old user's ace
         deleteMember(entityId, entityType, userUuid);
 
         // Add new user's ace
         for (MembershipPermission membershipPermission : membership.getPermissions()) {
-            Permission permission = permissionService.getPermission(membershipPermission);
+            final Permission permission = permissionService.getPermission(membershipPermission);
             insertAce(acl, userUuid, permission);
         }
 
@@ -154,9 +155,14 @@ public class MemberService {
         createPermission(entityId, entityType, userUuid, BasePermission.ADMINISTRATION);
     }
 
-    public <T> void createPermission(String entityId, Class<T> entityType, String userUuid, Permission permission) {
-        MutableAcl acl = retrieveAcl(entityId, entityType);
-        if (acl.getEntries().stream().filter(ace -> ace.getPermission().getMask() == permission.getMask()).findAny().isEmpty()) {
+    public <T> void createPermission(
+            String entityId, Class<T> entityType, String userUuid, Permission permission
+    ) {
+        final MutableAcl acl = retrieveAcl(entityId, entityType);
+        if (acl.getEntries().stream()
+                .filter(ace -> ace.getPermission().getMask() == permission.getMask())
+                .findAny()
+                .isEmpty()) {
             insertAce(acl, userUuid, permission);
             aclService.updateAcl(acl);
         }
@@ -164,35 +170,37 @@ public class MemberService {
 
     public boolean checkRole(UserRole role) {
         // 1. Get user
-        Optional<User> oUser = currentUserService.getCurrentUser();
-        if (oUser.isEmpty()) {
+        final Optional<User> user = currentUserService.getCurrentUser();
+        if (user.isEmpty()) {
             return false;
         }
-        User user = oUser.get();
 
         // 2. Validate
-        return user.getRole().equals(role);
+        return user.get().getRole().equals(role);
     }
 
-    public <T> boolean checkPermission(String entityId, Class<T> entityType, Permission permission) {
-        Optional<User> oUser = currentUserService.getCurrentUser();
+    public <T> boolean checkPermission(
+            String entityId, Class<T> entityType, Permission permission
+    ) {
+        final Optional<User> oUser = currentUserService.getCurrentUser();
         if (oUser.isEmpty()) {
             return false;
         }
-        User user = oUser.get();
+        final User user = oUser.get();
 
-        MutableAcl acl = retrieveAcl(entityId, entityType);
+        final MutableAcl acl = retrieveAcl(entityId, entityType);
         return acl.getEntries()
                 .stream()
                 .filter(ace -> ((PrincipalSid) ace.getSid()).getPrincipal().equals(user.getUuid()))
                 .map(AccessControlEntry::getPermission)
-                .anyMatch(p -> p.getMask() == permission.getMask());
+                .anyMatch(permission2 -> permission2.getMask() == permission.getMask());
     }
 
     public <T> void deleteMembers(User user) {
-        List<MongoAcl> acls = aclRepository.findAll();
+        final List<MongoAcl> acls = aclRepository.findAll();
         for (MongoAcl acl : acls) {
-            acl.getPermissions().removeIf(p -> p.getSid().getName().equals(user.getUuid()));
+            acl.getPermissions()
+                    .removeIf(permission -> permission.getSid().getName().equals(user.getUuid()));
             aclRepository.save(acl);
         }
         aclCache.clearCache();
@@ -201,10 +209,10 @@ public class MemberService {
     @PreAuthorize("hasPermission(#entityId, #entityType.getName(), 'WRITE') or hasRole('ADMIN')")
     public <T> void deleteMember(String entityId, Class<T> entityType, String userUuid) {
         // Get ACL
-        MutableAcl acl = retrieveAcl(entityId, entityType);
+        final MutableAcl acl = retrieveAcl(entityId, entityType);
 
         for (int i = acl.getEntries().size() - 1; i >= 0; i--) {
-            AccessControlEntry ace = acl.getEntries().get(i);
+            final AccessControlEntry ace = acl.getEntries().get(i);
             if (ace.getSid().equals(new PrincipalSid(userUuid))) {
                 acl.deleteAce(i);
             }
@@ -213,19 +221,19 @@ public class MemberService {
     }
 
     private Membership deriveMembership(List<Permission> permissions) {
-        List<Membership> memberships = membershipRepository.findAll();
+        final List<Membership> memberships = membershipRepository.findAll();
         for (Membership membership : memberships) {
-            List<MembershipPermission> membershipPermissions = membership.getPermissions();
-            List<Integer> mpMasks = membershipPermissions
+            final List<MembershipPermission> membershipPermissions = membership.getPermissions();
+            final List<Integer> mpMasks = membershipPermissions
                     .stream()
                     .map(MembershipPermission::getMask)
                     .sorted()
-                    .collect(Collectors.toList());
-            List<Integer> pMasks = permissions
+                    .toList();
+            final List<Integer> pMasks = permissions
                     .stream()
                     .map(Permission::getMask)
                     .sorted()
-                    .collect(Collectors.toList());
+                    .toList();
             if (mpMasks.equals(pMasks)) {
                 return membership;
             }
@@ -234,11 +242,12 @@ public class MemberService {
     }
 
     private <T> MutableAcl retrieveAcl(String entityId, Class<T> entityType) {
-        ObjectIdentity oi = new ObjectIdentityImpl(entityType, entityId);
+        final ObjectIdentity identity = new ObjectIdentityImpl(entityType, entityId);
         try {
-            return (MutableAcl) aclService.readAclById(oi);
-        } catch (NotFoundException nfe) {
-            return aclService.createAcl(oi);
+            return (MutableAcl) aclService.readAclById(identity);
+        }
+        catch (NotFoundException exception) {
+            return aclService.createAcl(identity);
         }
     }
 
